--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 
+
+kapt {
+    generateStubs = true
+}
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -49,6 +54,23 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
+
+    // dagger android
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+
+
+//    implementation 'com.google.dagger:dagger-android:2.20'
+//    implementation 'com.google.dagger:dagger-android-support:2.20' // if you use the support libraries
+//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.20'
+//    annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
+//    implementation 'com.google.dagger:dagger-android:2.20'
+//    implementation 'com.google.dagger:dagger-android-support:2.20' // if you use the support libraries
+//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.20'
+//    annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
