--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 }
 ext.room_version = "2.1.0-alpha04"
 ext.lifecycle_version = "2.0.0"
-
+ext.dagger_version = "2.22"
 allprojects {
     repositories {
         google()
